Don't overoptimize when absolute frames are reflown and the containing block should return a MEW. bug 192267 r/sr=dbaron